src/web/snapshots/rustlog__web__tests__admin_firehose_no_upgrade.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /admin/firehose
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Connection header did not include 'upgrade'
