src/web/snapshots/rustlog__web__tests__admin_unknown_with_key.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /admin/unknown
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid URL: unknown variant `admin`, expected `channel` or `channelid`
