src/web/snapshots/rustlog__web__tests__badges_unlogged_channel.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /badges/99999
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
