src/web/snapshots/rustlog__web__tests__capabilities.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /capabilities
status: 200 OK
content-type: application/json
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[
  "arbitrary-range-query",
  "search",
  "stats",
  "namehistory"
]
