src/web/snapshots/rustlog__web__tests__channel_by_login.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channel/testchan/2026/3/1
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
