src/web/snapshots/rustlog__web__tests__channel_day_json.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111/2026/3/1?json
status: 200 OK
content-type: application/json
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
{
  "messages": [
    {
      "channel": "testchan",
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000001",
      "raw": "@badge-info=;badges=subscriber/12;color=#FF0000;display-name=Alice;emotes=;flags=;id=00000000-0000-0000-0000-000000000001;room-id=11111;subscriber=1;tmi-sent-ts=1772348400000;user-id=22222;user-type= :alice!alice@alice.tmi.twitch.tv PRIVMSG #testchan :hello world",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000001",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772348400000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello world",
      "timestamp": "2026-03-01T07:00:00Z",
      "type": 1,
      "username": "alice"
    },
    {
      "channel": "testchan",
      "displayName": "Bob",
      "id": "00000000-0000-0000-0000-000000000002",
      "raw": "@badge-info=;badges=;display-name=Bob;emotes=;flags=;id=00000000-0000-0000-0000-000000000002;room-id=11111;tmi-sent-ts=1772353800500;user-id=33333;user-type= :bob!bob@bob.tmi.twitch.tv PRIVMSG #testchan :hi alice",
      "tags": {
        "badge-info": "",
        "badges": "",
        "display-name": "Bob",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000002",
        "room-id": "11111",
        "tmi-sent-ts": "1772353800500",
        "user-id": "33333",
        "user-type": ""
      },
      "text": "hi alice",
      "timestamp": "2026-03-01T08:30:00.500Z",
      "type": 1,
      "username": "bob"
    },
    {
      "channel": "testchan",
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000003",
      "raw": "@badge-info=;badges=subscriber/12;color=#FF0000;display-name=Alice;emotes=;flags=;id=00000000-0000-0000-0000-000000000003;room-id=11111;subscriber=1;tmi-sent-ts=1772355600000;user-id=22222;user-type= :alice!alice@alice.tmi.twitch.tv PRIVMSG #testchan :hello again",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000003",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772355600000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello again",
      "timestamp": "2026-03-01T09:00:00Z",
      "type": 1,
      "username": "alice"
    }
  ]
}
